--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/background_laptop.jpeg')">
 		<div class="heading">
-			<h1>Ajinkeya Chitrey</h1>
+			<h1>Naman Mehta</h1>
 			<p >A dedicated data enthusiast, driven by curiosity and fueled by technology, on a mission to create impactful solutions through the transformative potential of data.<br>
                 Stay Hungry! Stay Foolish!</p>
 			<h3 class="cd-headline clip is-full-width">
