--- a/index.html
+++ b/index.html
@@ -289,119 +289,70 @@
   </div><!-- end container -->
   </div><!-- end section -->
 
-  <div id="experience" class="section wb">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="message-box">
-            <h2><b>Experience</b></h2>
-
-            <!--<a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a> -->
-          </div><!-- end messagebox -->
-        </div><!-- end col -->
-
-        <div class="col-md-6">
-          <div class="right-box-pro wow fadeIn">
-            <!-- <img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded"> -->
-          </div><!-- end media -->
-        </div><!-- end col -->
-      </div><!-- end row -->
-    </div><!-- end container -->
-  </div><!-- end section -->
   <div id="experience" class="timeline1">
     <div class="container">
       <div class="timeline1">
-        <div class="container1 right">
-          <div class="content1">
-            <h2>Graduate Research Assistant, Gen AI</h2>
-            <h3>Columbia University, New York NY</h3>
-            <h3>Sept 2022 - Dec 2023</h3>
-            <p>
-              <li>• Conducted extensive research on GANs for high-frequency channel estimation to enable efficient
-                signal reconstruction.</li>
-            <p></p>
-            <li>• Trained Generative Adversarial Networks (WGAN-GP) and VAE models, attaining signal reconstruction
-              error within 5%.</li>
-            <p></p>
-
-
-            </p>
-          </div>
-        </div>
-
-
         <div class="container1 left">
           <div class="content1">
-            <h2>Data Science Intern </h2>
-            <h3>Wartsila, New York NY</h3>
-            <h3>June 2023 - Aug 2023</h3>
+            <h2>Senior Business Intelligence Engineer (Client focused)</h2>
+            <h3>Jones Lang Lasalle (JLL), Chicago, IL</h3>
+            <h3>Jun '23 - Present</h3>
             <p>
-              <li>• Created PySpark ETL pipelines consolidating 5+ years of Energy Storage Systems (ESS) activity data
-                into GCP BigQuery, leveraged to design dashboards for monitoring State of Health (SoH) of energy storage
-                arrays using Tableau, driving predictive maintenance strategies with minimum service disruption.</li>
+              <li>• Created PySpark ETL pipelines consolidating 5+ years of Energy Storage Systems (ESS) activity data into Azure Data Lake orchestrated using Airflow, leveraged to design Tableau dashboards for monitoring State of Health (SoH) of energy storage arrays, driving predictive maintenance strategies with minimum service disruption.</li>
             <p></p>
-            <li>• Developed a DeepAR probabilistic forecast model to determine optimal energy bidding price range and
-              quantify financial risks.</li>
+            <li>• Led 5 data extraction, warehousing, and analytics initiatives that reduced operating costs by 20% and created customized dashboards.</li>
             <p></p>
-            <li>• Designed and deployed an ensemble of 1D-CNN and LSTM models for energy demand forecasting at an island
-              site to drive energy production and storage optimization efforts, attaining an RMSE error rate of 3MW for
-              a mean load of 50MW.</li>
-            <p></p>
-
-            <li>• Developed business critical metrics to understand load forecasting model performance at peak load
-              times, driving optimization efforts around reducing last-minute backup engine initiations.</li>
-            <p></p>
-            <li>• Implemented an innovative training strategy to make model invariant to data scales, reducing frequency
-              of model retraining and redeployment efforts by 40% as the site’s energy usage dynamically increases.</li>
-            <p></p>
-            <li>• Executed a linear programming optimization on Gurobi to efficiently allocate energy sources to fulfill
-              forecasted energy demands.</li>
-            <p></p>
-
-
             </p>
           </div>
         </div>
-
+  
+        <div class="container1 left">
+          <div class="content1">
+            <h2>Data Engineer Intern (Technology team focused)</h2>
+            <h3>Jones Lang Lasalle (JLL), Chicago, IL</h3>
+            <h3>Jun '23 - Present</h3>
+            <p>
+              <li>• Optimized scripts using PySpark in Azure Databricks to reduce runtime with no impact on 3400+ customers.</li>
+            <p></p>
+              <li>• Built a system to provide real-time alerts and weekly summary dashboards in response to 200 GB of data embedded into Azure Data Lake streaming from IoT devices in 400+ office locations.</li>
+            <p></p>
+              <li>• Enhanced ETL pipelines for efficient data streaming of bill processes using Apache Kafka across 20+ vendors.</li>
+            <p></p>
+            </p>
+          </div>
+        </div>
+  
         <div class="container1 right">
           <div class="content1">
-            <h2>Analyst</h2>
-            <h3>Quantiphi Analytics Solutions, Mumbai IN</h3>
-            <h3>July 2020 - Mar 2022</h3>
+            <h2>Data Analyst</h2>
+            <h3>Pangea Tech, Bangalore, India</h3>
+            <h3>Nov '21 - May '22</h3>
             <p>
-              <li>• Performed extensive EDA using Python on historical sales data for a global restaurant chain,
-                engineered custom features, and deployed a sales forecasting DeepAR, Prophet, and BiLSTM ensemble model
-                on AWS SageMaker for supply chain optimization, attaining error rate of 6.2%.</li>
+              <li>• Consolidated $1Bn+ warranty claims data for a Fortune 500 automotive client using PySpark ETL pipelines into AWS Redshift Data Warehouse, powering Tableau dashboards to spotlight trends for defect root cause analysis and train predictive ML models for claim approval automation, resulting in savings of over $400k annually.</li>
             <p></p>
-            <li>• Consolidated $1Bn+ warranty claims data for a Fortune 500 automotive client using PySpark ETL
-              pipelines into Amazon Redshift, powering PowerBI dashboards to spotlight trends for defect root cause
-              analysis and train predictive ML models for claim approval automation, resulting in savings of over $400k
-              annually.</li>
+              <li>• Conducted comprehensive data tagging and discovery during an On-Prem to AWS Migration project, revealing critical data inconsistencies in the client's legacy systems, leading to targeted resolutions, and ensuring accurate transfer to Azure.</li>
             <p></p>
-            <li>• Conducted comprehensive data tagging and discovery during an On-Prem to AWS Cloud Migration project,
-              revealing critical data inconsistencies in the client's legacy systems, leading to targeted resolutions,
-              and ensuring accurate transfer to AWS.</li>
+            </p>
+          </div>
+        </div>
+  
+        <div class="container1 left">
+          <div class="content1">
+            <h2>Quant Data Analyst</h2>
+            <h3>Equity Data Science, Mumbai, India</h3>
+            <h3>Jun '20 - Oct '21</h3>
+            <p>
+              <li>• Delivered customized solutions to track investments, risk, and return through automated ETL pipelines and various Spotfire dashboards to analyze performance, resulting in a 90% client conversion and retention.</li>
             <p></p>
-            <li>• Built a transaction anomaly detector for a banking client using HDBSCAN clustering model parallelly
-              validated with 20 domain metrics established from historical data analysis using Pandas and SQL,
-              increasing fraud alerting efficiency by 70%.</li>
+              <li>• Architected an automated email reporting system for clients to consolidate their portfolio and market data, generating additional revenue from ~70% of existing clients.</li>
             <p></p>
-            <li>• Leveraged the YOLO model on live CCTV feed of a manufacturing warehouse to enhance forklift
-              utilization strategy, achieving a mean average precision (mAP) of 79%.</li>
-            <p></p>
-            <li>• Spearheaded a team of 4 developers in a pivotal analytics infrastructure setup project for an eminent
-              client, scoped all project requirements, managed delivery schedules, and established strong client
-              relationships.</li>
-            <p></p>
-            <li>• Consulted on multiple Go-To-Market initiatives to propose novel AI/ML and Big Data solutions to
-              prospective manufacturing, healthcare, and retail sector clients, enabling 3 project conversions.</li>
+              <li>• Implemented an NLP system automating financial document processing for 20+ investment firms with $500M+ annual revenue.</li>
             <p></p>
             </p>
           </div>
         </div>
       </div>
-
-
+  
       <div class="col-md-6">
         <div class="right-box-pro wow fadeIn">
           <!-- <img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded"> -->
