--- a/index.html
+++ b/index.html
@@ -129,26 +129,20 @@
         <div class="col-md-6">
           <div class="message-box">
             <h2><b>About Me</b></h2>
-            <p> Hello, I'm Naman Mehta. I earned my M.S. in Applied Data Science with a focus on Data Engineering and
-              Machine Learning from the University of Chicago.
-
-              During Summer 2023, I interned at JLL, a global leader in Corporate Real Estate, where I was involved in
-              multiple initiatives to drive optimization of energy production and storage strategies by developing
-              robust deep learning models for use cases such as energy load demand forecasting.
-
-              I have previously worked with Quantiphi Analytics as an Analyst in the AWS practice for ~2 years. I was
-              involved in multiple projects spanning domains of time series forecasting, predictive modeling, BI
-              analytics, computer vision, and data warehousing. In addition to augmenting my technical skills, I also
-              was able to nurture my business acumen and communication skills. I led a team of 4 developers on a project
-              for a Fortune 500 automotive client where I gathered all technical and business requirements, delivered
-              all project releases, and managed client relationships successfully.
-
-              I am currently working my way towards becoming a better Data-Driven Professional and am open to Full Time
-              Data Scientist/Machine Learning Engineer/Data Engineer/Analyst opportunities. Please feel free to reach
-              out to me if you have any leads!
-
-              In my free time, I enjoy playing squash and consuming tons of podcasts.
-
+            <p>
+            I'm Naman Mehta, a data engineer and applied data scientist with a passion for leveraging cutting-edge technologies
+            to solve complex business challenges. 
+              
+            With a Master's in Applied Data Science from the University of Chicago and
+            experience at companies like JLL and Pangea Tech, I specialize in building robust data pipelines, implementing machine
+            learning solutions, and creating insightful visualizations. My expertise spans big data technologies, cloud platforms,
+            and advanced analytics, with a particular focus on PySpark, Azure, and Tableau. I've successfully led projects that
+            have significantly reduced operating costs, automated processes, and provided actionable insights across various
+            industries. From optimizing energy storage systems to developing generative AI products, I'm always eager to explore
+            innovative ways to extract value from data. 
+                  
+            When I'm not diving into datasets, you can find me fine-tuning trading
+            algorithms or exploring the latest developments in natural language processing.
             </p>
 
             <a href="uploads/Naman Mehta Resume.pdf" class="sim-btn btn-hover-new"
@@ -176,7 +170,6 @@
           <p>
             <li>• M.S. in Applied Data Science from the University of Chicago</li>
             <li>• B.Sc. in Applied Statistics and Analytics from Narsee Monjee Institute of Management Studies</li>
-
           </p>
 
           <!--<a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a> -->
