--- a/index.html
+++ b/index.html
@@ -130,23 +130,29 @@
           <div class="message-box">
             <h2><b>About Me</b></h2>
             <p>
-            I'm Naman Mehta, a data engineer and applied data scientist with a passion for leveraging cutting-edge technologies
-            to solve complex business challenges. 
+              I'm Naman Mehta, a data engineer and applied data scientist with a passion for leveraging cutting-edge
+              technologies
+              to solve complex business challenges.
             </p>
-              
+
             <p>
-            With a Master's in Applied Data Science from the University of Chicago and
-            experience at companies like JLL and Pangea Tech, I specialize in building robust data pipelines, implementing machine
-            learning solutions, and creating insightful visualizations. My expertise spans big data technologies, cloud platforms,
-            and advanced analytics, with a particular focus on PySpark, Azure, and Tableau. I've successfully led projects that
-            have significantly reduced operating costs, automated processes, and provided actionable insights across various
-            industries. From optimizing energy storage systems to developing generative AI products, I'm always eager to explore
-            innovative ways to extract value from data. 
+              With a Master's in Applied Data Science from the University of Chicago and
+              experience at companies like JLL and Pangea Tech, I specialize in building robust data pipelines,
+              implementing machine
+              learning solutions, and creating insightful visualizations. My expertise spans big data technologies,
+              cloud platforms,
+              and advanced analytics, with a particular focus on PySpark, Azure, and Tableau. I've successfully led
+              projects that
+              have significantly reduced operating costs, automated processes, and provided actionable insights across
+              various
+              industries. From optimizing energy storage systems to developing generative AI products, I'm always eager
+              to explore
+              innovative ways to extract value from data.
             </p>
-                  
+
             <p>
-            When I'm not diving into datasets, you can find me fine-tuning trading
-            algorithms or exploring the latest developments in natural language processing.
+              When I'm not diving into datasets, you can find me fine-tuning trading
+              algorithms or exploring the latest developments in natural language processing.
             </p>
 
             <a href="uploads/Naman Mehta Resume.pdf" class="sim-btn btn-hover-new"
@@ -194,13 +200,11 @@
     <div class="container">
       <div class="section-title text-left">
         <h3>Skills</h3>
-        <p></p>
-      </div><!-- end title -->
-
+      </div>
 
       <div class="row">
-        <div class="col-md-4">
-          <div class="services-inner-box">
+        <div class="col-md-4 mb-4">
+          <div class="skill-box">
             <div class="ser-icon">
               <i class="flaticon-seo"></i>
             </div>
@@ -208,63 +212,53 @@
             <p>Advanced knowledge in Python. I have extensive experience building scalable solutions with Python
               throughout all my professional experiences and academics.</p>
           </div>
-        </div><!-- end col -->
+        </div>
 
-        <div class="col-md-4">
-          <div class="services-inner-box">
+        <div class="col-md-4 mb-4">
+          <div class="skill-box">
             <div class="ser-icon">
               <i class="flaticon-discuss-issue"></i>
             </div>
             <h2>SQL & Databases</h2>
-            <p> Advanced Proficiency working with SQL, Neo4j, MongoDB, and Snowflake.
-            </p>
+            <p>Advanced Proficiency working with SQL, Neo4j, MongoDB, and Snowflake.</p>
           </div>
-        </div><!-- end col -->
+        </div>
 
-
-        <div class="col-md-4">
-          <div class="services-inner-box">
+        <div class="col-md-4 mb-4">
+          <div class="skill-box">
             <div class="ser-icon">
               <i class="flaticon-process"></i>
             </div>
             <h2>Statistics</h2>
-            <p> I have a solid understanding of statistical concepts like hypothesis testing, z-test, t-test, ANOVA
+            <p>I have a solid understanding of statistical concepts like hypothesis testing, z-test, t-test, ANOVA
               tests, A/B testing, central limit theorem, regression analysis.</p>
           </div>
-        </div><!-- end col -->
+        </div>
 
-
-        <div class="col-md-4">
-          <div class="services-inner-box">
+        <div class="col-md-4 mb-4">
+          <div class="skill-box">
             <div class="ser-icon">
               <i class="flaticon-idea-1"></i>
             </div>
             <h2>Data Engineering & Cloud</h2>
             <p>I have considerable experience in creating ETL pipelines and Data Warehouses. I have worked with all
-              major AWS, Azure and GCP Cloud Services for Data Engineering, Machine Learning, and Analytics. </p>
-
+              major AWS, Azure and GCP Cloud Services for Data Engineering, Machine Learning, and Analytics.</p>
           </div>
-        </div><!-- end col -->
+        </div>
 
-
-
-
-        <div class="col-md-4">
-          <div class="services-inner-box">
+        <div class="col-md-4 mb-4">
+          <div class="skill-box">
             <div class="ser-icon">
               <i class="flaticon-development"></i>
             </div>
             <h2>Machine/Deep Learning</h2>
             <p>I have thorough hands-on experience and understanding of Supervised and Unsupervised Learning Algorithms,
-              Neural Nets, CNNs, Sequential Models, and Generative AI. </p>
-
+              Neural Nets, CNNs, Sequential Models, and Generative AI.</p>
           </div>
-        </div><!-- end col -->
+        </div>
 
-
-
-        <div class="col-md-4">
-          <div class="services-inner-box">
+        <div class="col-md-4 mb-4">
+          <div class="skill-box">
             <div class="ser-icon">
               <i class="flaticon-idea"></i>
             </div>
@@ -272,11 +266,10 @@
             <p>I have a strong understanding of key data visualization elements and I have created many industry scale
               dashboards in Tableau, PowerBI, and Looker.</p>
           </div>
-        </div><!-- end col -->
-
-      </div><!-- end row -->
-    </div><!-- end container -->
-  </div><!-- end section -->
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="col-md-6">
     <div class="right-box-pro wow fadeIn">
       <!-- <img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded"> -->
@@ -295,61 +288,77 @@
             <h3>Jones Lang Lasalle (JLL), Chicago, IL</h3>
             <h3>Jun '23 - Present</h3>
             <p>
-              <li>• Created PySpark ETL pipelines consolidating 5+ years of Energy Storage Systems (ESS) activity data into Azure Data Lake orchestrated using Airflow, leveraged to design Tableau dashboards for monitoring State of Health (SoH) of energy storage arrays, driving predictive maintenance strategies with minimum service disruption.</li>
+              <li>• Created PySpark ETL pipelines consolidating 5+ years of Energy Storage Systems (ESS) activity data
+                into Azure Data Lake orchestrated using Airflow, leveraged to design Tableau dashboards for monitoring
+                State of Health (SoH) of energy storage arrays, driving predictive maintenance strategies with minimum
+                service disruption.</li>
             <p></p>
-            <li>• Led 5 data extraction, warehousing, and analytics initiatives that reduced operating costs by 20% and created customized dashboards.</li>
+            <li>• Led 5 data extraction, warehousing, and analytics initiatives that reduced operating costs by 20% and
+              created customized dashboards.</li>
             <p></p>
             </p>
           </div>
         </div>
-  
+
         <div class="container1 left">
           <div class="content1">
             <h2>Data Engineer Intern (Technology team focused)</h2>
             <h3>Jones Lang Lasalle (JLL), Chicago, IL</h3>
             <h3>Jun '23 - Present</h3>
             <p>
-              <li>• Optimized scripts using PySpark in Azure Databricks to reduce runtime with no impact on 3400+ customers.</li>
+              <li>• Optimized scripts using PySpark in Azure Databricks to reduce runtime with no impact on 3400+
+                customers.</li>
             <p></p>
-              <li>• Built a system to provide real-time alerts and weekly summary dashboards in response to 200 GB of data embedded into Azure Data Lake streaming from IoT devices in 400+ office locations.</li>
+            <li>• Built a system to provide real-time alerts and weekly summary dashboards in response to 200 GB of data
+              embedded into Azure Data Lake streaming from IoT devices in 400+ office locations.</li>
             <p></p>
-              <li>• Enhanced ETL pipelines for efficient data streaming of bill processes using Apache Kafka across 20+ vendors.</li>
+            <li>• Enhanced ETL pipelines for efficient data streaming of bill processes using Apache Kafka across 20+
+              vendors.</li>
             <p></p>
             </p>
           </div>
         </div>
-  
+
         <div class="container1 right">
           <div class="content1">
             <h2>Data Analyst</h2>
             <h3>Pangea Tech, Bangalore, India</h3>
             <h3>Nov '21 - May '22</h3>
             <p>
-              <li>• Consolidated $1Bn+ warranty claims data for a Fortune 500 automotive client using PySpark ETL pipelines into AWS Redshift Data Warehouse, powering Tableau dashboards to spotlight trends for defect root cause analysis and train predictive ML models for claim approval automation, resulting in savings of over $400k annually.</li>
+              <li>• Consolidated $1Bn+ warranty claims data for a Fortune 500 automotive client using PySpark ETL
+                pipelines into AWS Redshift Data Warehouse, powering Tableau dashboards to spotlight trends for defect
+                root cause analysis and train predictive ML models for claim approval automation, resulting in savings
+                of over $400k annually.</li>
             <p></p>
-              <li>• Conducted comprehensive data tagging and discovery during an On-Prem to AWS Migration project, revealing critical data inconsistencies in the client's legacy systems, leading to targeted resolutions, and ensuring accurate transfer to Azure.</li>
+            <li>• Conducted comprehensive data tagging and discovery during an On-Prem to AWS Migration project,
+              revealing critical data inconsistencies in the client's legacy systems, leading to targeted resolutions,
+              and ensuring accurate transfer to Azure.</li>
             <p></p>
             </p>
           </div>
         </div>
-  
+
         <div class="container1 left">
           <div class="content1">
             <h2>Quant Data Analyst</h2>
             <h3>Equity Data Science, Mumbai, India</h3>
             <h3>Jun '20 - Oct '21</h3>
             <p>
-              <li>• Delivered customized solutions to track investments, risk, and return through automated ETL pipelines and various Spotfire dashboards to analyze performance, resulting in a 90% client conversion and retention.</li>
+              <li>• Delivered customized solutions to track investments, risk, and return through automated ETL
+                pipelines and various Spotfire dashboards to analyze performance, resulting in a 90% client conversion
+                and retention.</li>
             <p></p>
-              <li>• Architected an automated email reporting system for clients to consolidate their portfolio and market data, generating additional revenue from ~70% of existing clients.</li>
+            <li>• Architected an automated email reporting system for clients to consolidate their portfolio and market
+              data, generating additional revenue from ~70% of existing clients.</li>
             <p></p>
-              <li>• Implemented an NLP system automating financial document processing for 20+ investment firms with $500M+ annual revenue.</li>
+            <li>• Implemented an NLP system automating financial document processing for 20+ investment firms with
+              $500M+ annual revenue.</li>
             <p></p>
             </p>
           </div>
         </div>
       </div>
-  
+
       <div class="col-md-6">
         <div class="right-box-pro wow fadeIn">
           <!-- <img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded"> -->
