--- a/index.html
+++ b/index.html
@@ -104,10 +104,7 @@
       <h3 class="cd-headline clip is-full-width">
         <span></span>
         <span class="cd-words-wrapper">
-          <b class="is-visible"> Data Scientist </b>
-          <b>Machine learning Engineer</b>
-          <b>Data Engineer</b>
-          <b>Data Analyst</b>
+          <b class="is-visible"> Data Engineer </b>
         </span>
       </h3>
     </div>
