--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <div class="content1">
             <h2>Senior Business Intelligence Engineer (Client focused)</h2>
             <h3>Jones Lang Lasalle (JLL), Chicago, IL</h3>
-            <h3>Jun '23 - Present</h3>
+            <h3>Jan '24 - Present</h3>
             <p>
               <li>• Created PySpark ETL pipelines consolidating 5+ years of Energy Storage Systems (ESS) activity data
                 into Azure Data Lake orchestrated using Airflow, leveraged to design Tableau dashboards for monitoring
@@ -301,7 +301,7 @@
           <div class="content1">
             <h2>Data Engineer Intern (Technology team focused)</h2>
             <h3>Jones Lang Lasalle (JLL), Chicago, IL</h3>
-            <h3>Jun '23 - Present</h3>
+            <h3>Jun '23 - Dec '23</h3>
             <p>
               <li>• Optimized scripts using PySpark in Azure Databricks to reduce runtime with no impact on 3400+
                 customers.</li>
@@ -400,7 +400,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h4>Building Algorithmic Trading Infrastructure</h4>
-                  <p class="mb-0">Insert text here</p>
+                  <p class="mb-0">Designed an automated trading system that analyzes market trends in real-time, enabling more informed and timely investment decisions.</p>
                 </span>
               </span>
               <img class="img-fluid portfolio-img" src="uploads/algo-trading.jpeg" alt="">
@@ -412,7 +412,7 @@
               <span class="caption">
                 <span class="caption-content">
                   <h4>Forecasting NYC Yellow Taxi Prices and Demand</h4>
-                  <p class="mb-0">Insert Text Here. </p>
+                  <p class="mb-0">Developed a predictive model to help NYC taxi companies optimize their fleet deployment based on forecasted demand patterns.</p>
                 </span>
               </span>
               <img class="img-fluid portfolio-img" src="uploads/Big_Data_Pipeline.jpeg" alt="">
@@ -424,7 +424,8 @@
               <span class="caption">
                 <span class="caption-content">
                   <h4>GenAI based SQL Query Generation</h4>
-                  <p class="mb-0">Insert Text Here</p>
+                  <p class="mb-0">Created an AI-powered tool that translates plain English into database queries, 
+                        making data analysis accessible to non-technical team members.</p>
                 </span>
               </span>
               <img class="img-fluid portfolio-img" src="uploads/nlp.png" alt="">
@@ -537,7 +538,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="services-inner-box">
-              <img src="uploads/Naman-Testimonial1.png" alt="" class="img-fluid">
+              <img src="uploads/Naman-Testimonial1.png" alt="" class="img-fluid" style="width: 100%; height: auto;">
             </div>
           </div>
 
