--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="services-inner-box">
-              <img src="uploads/Naman-Testimonial1.png" width="500" height="400" alt="" class="img-fluid";>
+              <img src="uploads/Naman-Testimonial1.png" alt="" class="img-fluid";>
             </div>
           </div>
 
