--- a/index.html
+++ b/index.html
@@ -560,17 +560,15 @@
     </div>
     <div class="right-git">
       <a href="https://github.com/Naman101199"><img src="uploads/github.png" width="64" height="64" /></a>
-
-
     </div><!-- end container -->
+        
     <div class="right-linkdin">
       <a href="https://www.linkedin.com/in/naman101199/"><img src="uploads/linkedin.webp" width="64" height="64" /></a>
-
-
     </div><!-- end container -->
+        
     <div class="right-kaggle">
       <a href="https://www.kaggle.com/namanmehta1"><img src="uploads/kaggle.png" width="64" height="64" /></a>
-
+    </div><!-- end container -->
 
     </div><!-- end container -->
   </div><!-- end section -->
