--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         <span></span>
         <span class="cd-words-wrapper">
           <b class="is-visible"> Data Engineer </b>
+          <b>Machine learning Engineer</b>
         </span>
       </h3>
     </div>
@@ -590,5 +591,4 @@
   <script src="js/jquery.vide.js"></script>
 
 </body>
-
 </html>
