--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                   <p class="mb-0">Developed a predictive model to help NYC taxi companies optimize their fleet deployment based on forecasted demand patterns.</p>
                 </span>
               </span>
-              <img class="img-fluid portfolio-img" src="uploads/Big_Data_Pipeline.jpeg" alt="">
+              <img class="img-fluid portfolio-img" src="uploads/NYC Yellow Taxi.jpeg" alt="">
             </a>
           </div>
 
