--- a/index.html
+++ b/index.html
@@ -567,9 +567,9 @@
       <a href="https://www.linkedin.com/in/naman101199/"><img src="uploads/linkedin.webp" width="64" height="64" /></a>
     </div><!-- end container -->
         
-    <div class="right-kaggle">
+    <!--<div class="right-kaggle">
       <a href="https://www.kaggle.com/namanmehta1"><img src="uploads/kaggle.png" width="64" height="64" /></a>
-    </div><!-- end container -->
+    </div>--> <!-- end container -->  
   </div><!-- end section -->
 
   <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
