--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="services-inner-box">
-              <img src="uploads/Naman-Testimonial1.png" width="100%" height="100%" alt="" class="img-fluid" />
+              <img src="uploads/Naman-Testimonial1.png" width="100%" height="100%" alt="" class="img-fluid testimonial" />
             </div>
           </div>
 
