--- a/index.html
+++ b/index.html
@@ -139,18 +139,17 @@
               implementing machine
               learning solutions, and creating insightful visualizations. My expertise spans big data technologies,
               cloud platforms,
-              and advanced analytics, with a particular focus on PySpark, Azure, and Tableau. I've successfully led
+              and advanced analytics, with a particular focus on PySpark, cloud platforms, and Tableau. I've successfully led
               projects that
               have significantly reduced operating costs, automated processes, and provided actionable insights across
               various
-              industries. From optimizing energy storage systems to developing generative AI products, I'm always eager
+              industries. From optimizing workflows to developing generative AI products, I'm always eager
               to explore
               innovative ways to extract value from data.
             </p>
 
             <p>
-              When I'm not diving into datasets, you can find me fine-tuning trading
-              algorithms or exploring the latest developments in natural language processing.
+              When I'm not diving into datasets, you can find me listening to podcasts, or playing chess or tennis or poker.
             </p>
 
             <a href="uploads/Naman Mehta Resume.pdf" class="sim-btn btn-hover-new"
