--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </p>
 
             <p>
-              When I'm not diving into datasets, you can find me listening to podcasts, or playing chess or tennis or poker.
+              When I'm not diving into datasets, you can find me listening to podcasts, playing chess, tennis, or poker.
             </p>
 
             <a href="uploads/Naman Mehta Resume.pdf" class="sim-btn btn-hover-new"
