--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <span></span>
         <span class="cd-words-wrapper">
           <b class="is-visible"> Data Engineer </b>
-          <b>Data Engineer</b>
+          <b>Analytics Engineer</b>
         </span>
       </h3>
     </div>
