--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <div class="timeline1">
         <div class="container1 left">
           <div class="content1">
-            <h2>Senior Business Intelligence Engineer (Client focused)</h2>
+            <h2>Senior Business Intelligence Engineer</h2>
             <h3>Jones Lang Lasalle (JLL), Chicago, IL</h3>
             <h3>Jan '24 - Present</h3>
             <p>
@@ -297,10 +297,10 @@
           </div>
         </div>
 
-        <div class="container1 left">
+        <div class="container1 right">
           <div class="content1">
-            <h2>Data Engineer Intern (Technology team focused)</h2>
-            <h3>Jones Lang Lasalle (JLL), Chicago, IL</h3>
+            <h2>Data Engineer Intern</h2>
+            <h3>Jones Lang Lasalle Technologies (JLLT), Chicago, IL</h3>
             <h3>Jun '23 - Dec '23</h3>
             <p>
               <li>• Optimized scripts using PySpark in Azure Databricks to reduce runtime with no impact on 3400+
