--- a/index.html
+++ b/index.html
@@ -279,6 +279,22 @@
   <div id="experience" class="timeline1">
     <div class="container">
       <div class="timeline1">
+            
+        <div class="container1 left">
+          <div class="content1">
+            <h2>Technology Advisor</h2>
+            <h3>Anduril Partners</h3>
+            <h3>Jan '24 - Present</h3>
+            <p>
+              <li>• Architected data solutions for 4+ partner clients involiving automation, data pipelines, data analysis and decision making. </li>
+            <p></p>
+            <li>• Advising the team on the use of cloud technology, AI, and automation on growing the client base. </li>
+            <p></p>
+            </p>
+          </div>
+        </div>            
+
+            
         <div class="container1 left">
           <div class="content1">
             <h2>Senior Business Intelligence Engineer</h2>
