--- a/index.html
+++ b/index.html
@@ -276,6 +276,28 @@
   </div><!-- end container -->
   </div><!-- end section -->
 
+
+    <div id="experience" class="section wb">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="message-box">
+                        <h2><b>Experience</b></h2>
+
+                        <!--<a href="#" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a> -->
+                    </div><!-- end messagebox -->
+                </div><!-- end col -->
+
+                <div class="col-md-6">
+                    <div class="right-box-pro wow fadeIn">
+                       <!-- <img src="uploads/about_04.jpg" alt="" class="img-fluid img-rounded"> -->
+                    </div><!-- end media -->
+                </div><!-- end col -->
+            </div><!-- end row -->
+        </div><!-- end container -->
+    </div><!-- end section -->
+      
+      
   <div id="experience" class="timeline1">
     <div class="container">
       <div class="timeline1">
