--- a/index.html
+++ b/index.html
@@ -526,10 +526,17 @@
         <div class="row">
           <div class="col-md-6">
             <div class="services-inner-box">
-              <img src="uploads/Naman-Testimonial1.png" width="100%" height="100%" alt="" class="img-fluid" />
+              <img src="uploads/Naman-Testimonial1.png" alt="" class="img-fluid" />
             </div>
           </div>
 
+           <div class="col-md-6">
+                  <div class="services-inner-box">
+                      <img src="uploads/Testimonial 2.png" class="img-fluid">
+                  </div>
+            </div>
+
+              
         </div>
       </div><!-- end row -->
     </div><!-- end container -->
