--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
         <h3>Contact</h3>
 
         <p> <b> <a href="" target="blank">Mobile Number: +1 (773) 808-9229</b></p>
-        <p><b><a href="mailto:mehta.naman.jobs@gmail.com" target="blank">Email: mehta.naman.jobs@gmail.com</b></p>
+        <p><b><a href="mailto:mehtanaman1199@gmail.com" target="blank">Email: mehta.naman.jobs@gmail.com</b></p>
 
       </div><!-- end title -->
     </div>
