--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
       <h3 class="cd-headline clip is-full-width">
         <span></span>
         <span class="cd-words-wrapper">
-          <b class="is-visible"> Data Engineer </b>
-          <b>Analytics Engineer</b>
+          <b class="is-visible"> Data Scientist </b>
+              <b>Data Engineer Engineer</b>
+              <b>Analytics Engineer</b>
         </span>
       </h3>
     </div>
