--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
               <i class="flaticon-seo"></i>
             </div>
             <h2>Python</h2>
-            <p>Advanced knowledge in Python. I have extensive experience building scalable solutions with Python
-              throughout all my professional experiences and academics.</p>
+            <p>I possess advanced knowledge in Python, having extensive experience in building scalable solutions throughout my professional projects and academic research. My proficiency extends to frameworks and libraries such as Pandas, Scikit-learn, PyTorch, TensorFlow, and Flask. I have utilized Python to develop machine learning models, implement ETL pipelines, and create APIs, consistently demonstrating my ability to handle complex data-driven tasks efficiently.</p>
           </div>
         </div>
 
@@ -218,7 +217,7 @@
               <i class="flaticon-discuss-issue"></i>
             </div>
             <h2>SQL & Databases</h2>
-            <p>Advanced Proficiency working with SQL, Neo4j, MongoDB, and Snowflake.</p>
+            <p>I have advanced proficiency in working with SQL and have substantial experience with both SQL databases like PostgreSQL and MySQL, as well as NoSQL databases such as Neo4j and MongoDB. My expertise includes data warehousing solutions like Snowflake, where I have developed complex queries, optimized database performance, and managed large datasets to ensure data integrity and accessibility.</p>
           </div>
         </div>
 
@@ -228,8 +227,7 @@
               <i class="flaticon-process"></i>
             </div>
             <h2>Statistics</h2>
-            <p>I have a solid understanding of statistical concepts like hypothesis testing, z-test, t-test, ANOVA
-              tests, A/B testing, central limit theorem, regression analysis.</p>
+            <p>My solid understanding of statistical concepts includes proficiency in hypothesis testing methods like z-tests, t-tests, and ANOVA tests. I am experienced in conducting A/B testing, regression analysis, and applying the central limit theorem. These statistical methods have been pivotal in my data analysis processes, allowing me to uncover insights and support data-driven decision-making effectively.</p>
           </div>
         </div>
 
@@ -239,8 +237,7 @@
               <i class="flaticon-idea-1"></i>
             </div>
             <h2>Data Engineering & Cloud</h2>
-            <p>I have considerable experience in creating ETL pipelines and Data Warehouses. I have worked with all
-              major AWS, Azure and GCP Cloud Services for Data Engineering, Machine Learning, and Analytics.</p>
+            <p>With considerable experience in creating ETL pipelines and data warehouses, I have worked extensively with major cloud platforms such as AWS, Azure, and GCP. My skills include leveraging cloud services for data engineering, machine learning, and analytics. I have developed and optimized data pipelines using tools like Azure Data Lake, Databricks, AWS Lambda, AWS Glue, Apache Kafka, and Apache Spark, enhancing data processing speed and efficiency.</p>
           </div>
         </div>
 
@@ -250,8 +247,7 @@
               <i class="flaticon-development"></i>
             </div>
             <h2>Machine/Deep Learning</h2>
-            <p>I have thorough hands-on experience and understanding of Supervised and Unsupervised Learning Algorithms,
-              Neural Nets, CNNs, Sequential Models, and Generative AI.</p>
+            <p>I have thorough hands-on experience with supervised and unsupervised learning algorithms, neural networks, CNNs, sequential models, and generative AI. My work includes developing and deploying machine learning models for predictive maintenance, sentiment analysis, and sales forecasting. Utilizing platforms like Azure ML Studio, GCP Vertex AI Studio, and AWS SageMaker, I have successfully trained and deployed models that drive significant business value.</p>
           </div>
         </div>
 
@@ -261,8 +257,7 @@
               <i class="flaticon-idea"></i>
             </div>
             <h2>Data Visualization</h2>
-            <p>I have a strong understanding of key data visualization elements and I have created many industry scale
-              dashboards in Tableau, PowerBI, and Looker.</p>
+            <p>I possess a strong understanding of key data visualization elements and have created industry-scale dashboards using Tableau, PowerBI, and Looker. My experience includes enhancing dashboards with row-level security and granular data access control, ensuring data confidentiality compliance. These visualizations have been crucial in providing actionable insights for financial planning, sales strategy, and operations optimization, leading to improved decision-making and performance.</p>
           </div>
         </div>
       </div>
