--- a/index.html
+++ b/index.html
@@ -135,18 +135,11 @@
             </p>
 
             <p>
-              With a Master's in Applied Data Science from the University of Chicago and
-              experience at companies like JLL and Pangea Tech, I specialize in building robust data pipelines,
-              implementing machine
-              learning solutions, and creating insightful visualizations. My expertise spans big data technologies,
-              cloud platforms,
-              and advanced analytics, with a particular focus on PySpark, cloud platforms, and Tableau. I've successfully led
-              projects that
-              have significantly reduced operating costs, automated processes, and provided actionable insights across
-              various
-              industries. From optimizing workflows to developing generative AI products, I'm always eager
-              to explore
-              innovative ways to extract value from data.
+              With a solid academic foundation in Applied Statistics and Analytics, topped with a Master's in Applied Data Science, I specialize in building robust data pipelines,
+              implementing machine learning solutions, and creating insightful visualizations. I've successfully led
+              projects that have significantly reduced operating costs, automated processes, and provided actionable insights across
+              various industries. From optimizing workflows to developing generative AI products, I'm always eager
+              to explore innovative ways to extract value from data.
             </p>
 
             <p>
